--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <title>UCSD Weather Widget</title>
 </head>
 <body>
-    <div id="weather-widget">
-        <p id="temperature"></p>
-        <p id="conditions"></p>
-        <img id="weather-icon" src="" alt="Weather Icon" style="display: none;">
-    </div>
-
+    <weather-widget>
+        <div id="weather-content">
+            <!-- Weather data placeholders -->
+            <p id="temperature"></p>
+            <p id="conditions"></p>
+            <p id="wind"></p>
+            <p id="humidity"></p>
+            <img id="weather-icon" alt="Weather Icon" style="display: none;">
+        </div>
+        <noscript>
+            <p>Current Weather Conditions Unavailable</p>
+        </noscript>
+    </weather-widget>
+    <script src="weather-widget.js"></script>
 </body>
 </html>
