--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>UCSD Weather Widget</title>
+    <h1> This is a test!</h1>
 </head>
 <body>
+    <p>This is also a test</p>
     <weather-widget>
         <div id="weather-content">
             <!-- Weather data placeholders -->
