--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>UCSD Weather Widget</title>
-    <h1> This is a test!</h1>
 </head>
 <body>
-    <p>This is also a test</p>
     <weather-widget>
         <div id="weather-content">
             <!-- Weather data placeholders -->
@@ -20,6 +18,6 @@
             <p>Current Weather Conditions Unavailable</p>
         </noscript>
     </weather-widget>
-    <script src="weather-widget.js"></script>
+    <script src="widget.js"></script>
 </body>
 </html>
