--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>UCSD Weather Widget</title>
+    <h1>Current Weather</h1>
 </head>
 <body>
     <weather-widget>
         <div id="weather-content">
-            <!-- Weather data placeholders -->
-            <p id="temperature"></p>
-            <p id="conditions"></p>
-            <p id="wind"></p>
-            <p id="humidity"></p>
             <img id="weather-icon" alt="Weather Icon" style="display: none;">
+            <span id="conditions"></span>
+            <span id="temperature"></span>
         </div>
         <noscript>
             <p>Current Weather Conditions Unavailable</p>
         </noscript>
     </weather-widget>
+    
     <script src="widget.js"></script>
 </body>
 </html>
