style + more conditions

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <weather-widget>
         <div id="weather-content">
             <img id="weather-icon" alt="Weather Icon" style="display: none;">
-            <span id="conditions"></span>
-            <span id="temperature"></span>
+            <div id="weather-info">
+                <span id="conditions"></span>
+                <span id="wind-speed"></span>
+                <span id="humidity"></span>
+            </div>
         </div>
         <noscript>
             <p>Current Weather Conditions Unavailable</p>
         </noscript>
     </weather-widget>
-    
     <script src="widget.js"></script>
 </body>
 </html>
