--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <img id="weather-icon" alt="Weather Icon" style="display: none;">
             <div id="weather-info">
                 <span id="conditions"></span>
+                <span id="temperature"></span>
                 <span id="wind-speed"></span>
                 <span id="humidity"></span>
             </div>
