--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
     <weather-widget>
         <div id="weather-content">
             <img id="weather-icon" alt="Weather Icon" style="display: none;">
-            <div id="weather-info">
-                <span id="conditions"></span>
-                <span id="temperature"></span>
-                <span id="wind-speed"></span>
-                <span id="humidity"></span>
-            </div>
+            <span id="conditions"></span>
+            <span id="temperature"></span>
         </div>
         <noscript>
             <p>Current Weather Conditions Unavailable</p>
         </noscript>
     </weather-widget>
+    
+    <script src="weather-widget.js"></script>
     <script src="widget.js"></script>
 </body>
 </html>
